Update phase 2-3